--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <!-- left -->
         <div class="collapse navbar-collapse">
@@ -16,7 +16,7 @@
         <div class="mr-auto">
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="dark-theme-switch">
-                <label class="form-check-label" for="dark-theme-switch" id="dark-theme-switch__label">Dark mode</label>
+                <label class="form-check-label" for="dark-theme-switch" id="dark-theme-switch__label">Dark theme</label>
             </div>
         </div>
     </div>
