--- a/public/assets/css/defaults.css
+++ b/public/assets/css/defaults.css
@@ -17,7 +17,15 @@ body {
 }
 
 #content {
-    margin-top: 2.5em;
+    padding-left: 20vw;
+    padding-right: 20vw;
+    margin: 2.5em 0;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 #content > h1 {
