--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -7,7 +7,7 @@
                     <a class="nav-link" href="#home" data-controller="home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#room" data-controller="room">Room</a>
+                    <a class="nav-link" href="#rooms" data-controller="rooms">Rooms</a>
                 </li>
             </ul>
         </div>
